Item delete route
