# src/utils/openapi.json
@@ -2403,6 +2403,72 @@
         }
       }
     },
+    "/item/delete/{itemId}": {
+      "delete": {
+        "security": [
+          {
+            "appApiKey": [],
+            "shopBearerAuth": [],
+            "adminBearerAuth": []
+          }
+        ],
+        "tags": ["Item"],
+        "summary": "Delete a specific item",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "itemId",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true,
+            "description": "Numeric ID of the Item to delete."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Item deleted",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ItemDeleteRes"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Item not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundError"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Invalid api key OR Invalid token OR Token does not have the right privileges",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenError"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Authorization token was not provided",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/qrcode/create": {
       "post": {
         "security": [
@@ -5731,6 +5797,43 @@
         }
       },
       "ItemGetRes": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "example": 1
+          },
+          "name": {
+            "type": "string",
+            "example": "Jane Doe"
+          },
+          "price": {
+            "type": "number",
+            "example": 1.99
+          },
+          "categoryId": {
+            "type": "integer",
+            "example": 1
+          },
+          "description": {
+            "type": "string",
+            "example": "Bolinho de murango"
+          },
+          "temperature": {
+            "type": "string",
+            "example": "cold"
+          },
+          "createdAt": {
+            "type": "string",
+            "example": "2023-04-03T00:25:32.189Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "example": "2023-04-03T00:25:32.189Z"
+          }
+        }
+      },
+      "ItemDeleteRes": {
         "type": "object",
         "properties": {
           "id": {
